--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^7.0.2",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
